src/ui/snapshots/fresh_s_40x16.snap
---
source: src/ui/snapshot_tests.rs
expression: frame
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 16 },
    content: [
        " Fresh Lv.1 | P:0 None 1.00x | Zone 1: M",
        "            XP: 0/100 (0.0%)            ",
        "HP                                      ",
        "                                        ",
        "   ⠙ Scanning the horizon... | DPS: 7   ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "                                        ",
        "  Awaiting adventure...                 ",
        "Esc:Quit         P:Prestige !:Bug       ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Yellow, bg: Rgb(30, 28, 8), underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Green, underline: Reset, modifier: BOLD,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
