src/ui/snapshots/launch_transition_beat1_xl_160x45.snap
---
source: src/ui/overlay_snapshot_tests.rs
expression: frame
---
Buffer {
    area: Rect { x: 0, y: 0, width: 160, height: 45 },
    content: [
        "·                                                                                                                                             1 / 5 — Farewell  ",
        "                                                                                                                                                    ·           ",
        "                                                           ·                                                                                                    ",
        "        ·                                                                                                                                                       ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                               ·                                                                                                ",
        "                                                                                                                                                               ·",
        "                                                                                    ·                                                      ·                    ",
        "                                                                           ··                                                                                   ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                       ·                                                                                                                        ",
        "                                                                                                                                                                ",
        "                                                                                                                                                      ·         ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                 The Origin Thread has spoken.                                                                  ",
        "                                                               This branch of Yggdrasil is dying.                                                               ",
        "                  ·                                  Everything you built was preparation for this moment.                                                      ",
        "                                                                                ·                                                                               ",
        "                                                                                ·                                                                               ",
        "                                                                                                                                                                ",
        "                ·                            ·                                          ·                                                                       ",
        "                                                                                                                                                                ",
        "                          ·                                                                                                                                     ",
        "                                                                              ·                                       ·                                         ",
        "                                                                                                                                                                ",
        "                                                                                                                                           ·                    ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                            ·                   ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "            ·                ·                               ·              [Enter]                                                                             ",
        "                                                                                                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 141, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 148, y: 1, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 149, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 6, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 7, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 8, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 85, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 8, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 140, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 9, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 14, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 150, y: 16, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 151, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 19, fg: Rgb(150, 150, 150), bg: Reset, underline: Reset, modifier: NONE,
        x: 94, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 20, fg: Rgb(150, 150, 150), bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 21, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 21, fg: Rgb(150, 150, 150), bg: Reset, underline: Reset, modifier: NONE,
        x: 106, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 22, fg: Rgb(33, 33, 37), bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 23, fg: Rgb(33, 33, 37), bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 25, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 25, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 25, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 89, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 27, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 28, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 118, y: 28, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 119, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 139, y: 30, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 140, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 140, y: 36, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 141, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 43, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 43, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 43, fg: Rgb(30, 28, 40), bg: Reset, underline: Reset, modifier: NONE,
        x: 62, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 43, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
