src/ui/snapshots/launch_transition_beat5_xl_160x45.snap
---
source: src/ui/overlay_snapshot_tests.rs
expression: frame
---
Buffer {
    area: Rect { x: 0, y: 0, width: 160, height: 45 },
    content: [
        "·                                                                                                                                                 5 / 5 — Void  ",
        "                                                                                                                                                    ·           ",
        "                                                           ·                                                                                                    ",
        "        ·                                                                                                                                                       ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                               ·                                                                                                ",
        "                                                                                                                                                               ·",
        "                                                                                    ·                                                      ·                    ",
        "                                                                           ··                                                                                   ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                       ·                                                                                                                        ",
        "                                                                                                                                                                ",
        "                                                                             ·  ·                                                                     ·         ",
        "                                                                       ·          ·    ·                                                                        ",
        "                                                                    ·  ·    ╱═══╲                                                                               ",
        "                                                                           ╱ ◆◆◆ ╲    ·                                                                         ",
        "                                                                    ·     ╱═══════╲        ·                                                                    ",
        "                  ·                                                      ═══════════    ·                                                                       ",
        "                                                                    ·        ║║║║          ·                                                                    ",
        "                                                                         ·      · ·  ·                                                                          ",
        "                                                                                                                                                                ",
        "                ·                            ·                                          ·                                                                       ",
        "                                                                                                                                                                ",
        "                          ·                                                                                                                                     ",
        "                                                                              ·                                       ·                                         ",
        "                                                                                                                                                                ",
        "                                                                                                                                           ·                    ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                            ·                   ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "                                                                                                                                                                ",
        "            ·                ·                               ·              [Enter]                                                                             ",
        "                                                                                                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Black, bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 145, y: 0, fg: DarkGray, bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 159, y: 0, fg: Black, bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 76, y: 43, fg: DarkGray, bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 83, y: 43, fg: Black, bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
    ]
}
